--- a/src/index.html
+++ b/src/index.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html>
   <head>
-    <title>Restraunt Page</title>
+    <title>Your Restraunt</title>
   </head>
   <body>
       <div id="content"></div>
